# cool_common

./: .gitignore  Cargo.toml  LICENSE  Makefile.toml  README.md
examples/init/: Cargo.toml  README.md
examples/init/config/: cool.toml  cool_common.toml
examples/init/src/: main.rs
src/: clist.rs  command.rs  config.rs  ctracing.rs  lib.rs  list.rs
