[package]
name = "cool_common"
description = "Cool common lib."
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# 读取配置文件
config = { version = "0.13" }
serde = { version = "1" }
lazy_static = "1"

# 日志输出
tracing = { version = "0.1" }
# 日志收集器,收集后输出到控制台、文件中等
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
# 日志文件输出,支持非阻塞写入日志
tracing-appender = { version = "0.2" }
tracing-panic = "0.1"
color-eyre = "0.6"

# result
anyhow = "1"
# 编码/解码
encoding = "0.2"
