[package]
name = "init"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cool_common = { path = "../../" }

# 日志输出
tracing = { version = "0.1" }
# 日志收集器,收集后输出到控制台、文件中等
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
# 日志文件输出,支持非阻塞写入日志
tracing-appender = { version = "0.2" }
